feat(leave): tampilkan semua leave berdasarkan NIK, ID, dan filter query type & status
